--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
 
                   <div class="col-6">
                     <div class="info-item">
-                      <span class="label">出生日期</span>
-                      <span class="value">2002年9月7日</span>
+                      <span class="label">年龄</span>
+                      <span class="value">22岁</span>
                     </div>
                   </div>
 
