change for project

--- a/index.html
+++ b/index.html
@@ -515,6 +515,7 @@
                   <li>实现基于AES加密算法的密码安全存储机制，保障用户数据安全</li>
                   <li>设计并开发用户权限管理系统，实现不同角色用户的差异化功能访问</li>
                   <li>与后端团队协作，实现数据加密存储和区块链智能合约的集成</li>
+                  <li>项目已托管至GitHub，代码仓库：https://github.com/hkutokenflow/hkutokenflow_sqlite</li>
                 </ul>
               </div>
               <div class="project-tags">
@@ -524,6 +525,7 @@
                 <span class="project-tag">UI/UX设计</span>
                 <span class="project-tag">智能合约</span>
                 <span class="project-tag">数据库管理</span>
+                <span class="project-tag">GitHub</span>
               </div>
             </div>
 
@@ -557,10 +559,10 @@
               </div>
               <div class="project-content">
                 <ul>
-                  <li>作为广东省"攀登计划"重点推荐项目组成员，在深圳大学大数据技术与应用研究所实验室参与科研工作</li>
-                  <li>负责数据处理和算法研究，复现并评估多种短文本主题模型（LDA、BTM、DMM等）</li>
-                  <li>利用StackOverflow等公开数据集进行模型训练和评估，在主题一致性等方面提供算法优化建议</li>
-                  <li>参与项目从数据处理到模型评估的全流程，提升了算法模型的准确性和实用性</li>
+                  <li>该项目被列入2022年广东省科技创新战略专项资金审批名单，其子项目为短文本主题建模算法研究</li>
+                  <li>参与子项目研究，利用SearchSnippets等公开数据集，对LDA、BTM、DMM和GPU-DMM等多种短文本主题模型进行实验评估</li>
+                  <li>从精确度等多个维度对算法模型进行全面评估，为模型优化提供数据支持</li>
+                  <li>研究成果被记录在《Embeddings Enhanced Topic Modeling for Short Texts》研究论文中</li>
                 </ul>
               </div>
               <div class="project-tags">
@@ -569,6 +571,7 @@
                 <span class="project-tag">自然语言处理</span>
                 <span class="project-tag">数据分析</span>
                 <span class="project-tag">科研项目</span>
+                <span class="project-tag">论文发表</span>
               </div>
             </div>
 
@@ -606,6 +609,7 @@
                   <li>设计并实现用户友好的界面，支持股票数据展示、用户持仓管理、管理员权限控制等功能</li>
                   <li>使用Echarts组件实现股票数据可视化，包括K线图、折线图等多种图表展示</li>
                   <li>开发实时数据更新功能，实现股票数据的动态展示和用户交易数据的统计分析</li>
+                  <li>项目已托管至GitHub，代码仓库：https://github.com/hellokkx/stock_vue</li>
                 </ul>
               </div>
               <div class="project-tags">
@@ -614,6 +618,7 @@
                 <span class="project-tag">前端开发</span>
                 <span class="project-tag">数据可视化</span>
                 <span class="project-tag">团队协作</span>
+                <span class="project-tag">GitHub</span>
               </div>
             </div>
 
@@ -635,6 +640,75 @@
                 <span class="project-tag">数据可视化</span>
                 <span class="project-tag">数学教育</span>
                 <span class="project-tag">教学创新</span>
+              </div>
+            </div>
+
+            <div class="project-card">
+              <div class="project-header">
+                <h3 class="project-title">粤苗App开发</h3>
+                <span class="project-period">2023.02 - 2023.05</span>
+              </div>
+              <div class="project-content">
+                <ul>
+                  <li>参与粤苗App的Android客户端开发，负责多个核心功能模块的实现</li>
+                  <li>集成高德地图API，实现地图定位、导航等地理信息服务功能</li>
+                  <li>开发相机模块，实现拍照、图片处理等功能，并集成视频播放器</li>
+                  <li>使用SharedPreferences实现用户登录状态持久化，包括记住密码功能</li>
+                  <li>设计并实现卡片式UI界面，提升用户体验和界面美观度</li>
+                  <li>负责多个第三方API的集成和调用，确保功能模块的稳定运行</li>
+                </ul>
+              </div>
+              <div class="project-tags">
+                <span class="project-tag">Android开发</span>
+                <span class="project-tag">地图API</span>
+                <span class="project-tag">UI/UX设计</span>
+                <span class="project-tag">相机模块</span>
+                <span class="project-tag">数据持久化</span>
+                <span class="project-tag">第三方集成</span>
+              </div>
+            </div>
+
+            <div class="project-card">
+              <div class="project-header">
+                <h3 class="project-title">图书管理系统</h3>
+                <span class="project-period">2023.09 - 2023.12</span>
+              </div>
+              <div class="project-content">
+                <ul>
+                  <li>在深圳大学开发基于Vue + SpringBoot + MySQL的图书管理系统</li>
+                  <li>负责前后端开发，实现图书和人员信息的增删改查等基础功能</li>
+                  <li>设计并实现前后端数据交互接口，确保系统稳定运行</li>
+                  <li>项目已托管至GitHub，代码仓库：https://github.com/hellokkx/library_management</li>
+                </ul>
+              </div>
+              <div class="project-tags">
+                <span class="project-tag">Vue</span>
+                <span class="project-tag">SpringBoot</span>
+                <span class="project-tag">MySQL</span>
+                <span class="project-tag">前后端开发</span>
+                <span class="project-tag">GitHub</span>
+              </div>
+            </div>
+
+            <div class="project-card">
+              <div class="project-header">
+                <h3 class="project-title">冰酒销售管理系统</h3>
+                <span class="project-period">2023.09 - 2023.12</span>
+              </div>
+              <div class="project-content">
+                <ul>
+                  <li>在深圳大学开发基于Vue + SpringBoot + MySQL的冰酒销售管理系统</li>
+                  <li>负责前后端开发，实现商品管理、订单处理、用户管理等核心功能</li>
+                  <li>设计并实现前后端数据交互接口，确保系统稳定运行</li>
+                  <li>项目已托管至GitHub，代码仓库：https://github.com/hellokkx/icewine</li>
+                </ul>
+              </div>
+              <div class="project-tags">
+                <span class="project-tag">Vue</span>
+                <span class="project-tag">SpringBoot</span>
+                <span class="project-tag">MySQL</span>
+                <span class="project-tag">前后端开发</span>
+                <span class="project-tag">GitHub</span>
               </div>
             </div>
           </div>
